--- a/viewer/src/App.less
+++ b/viewer/src/App.less
@@ -1,3 +1,19 @@
+:root {
+  --diff-background-color: initial;
+  --diff-text-color: initial;
+  --diff-font-family: Consolas, Courier, monospace;
+  --diff-selection-background-color: #b3d7ff;
+  --diff-gutter-insert-background-color: #d6fedb;
+  --diff-gutter-delete-background-color: #fadde0;
+  --diff-gutter-selected-background-color: #fffce0;
+  --diff-code-insert-background-color: #eaffee;
+  --diff-code-delete-background-color: #fdeff0;
+  --diff-code-insert-edit-background-color: #a1feb3;
+  --diff-code-delete-edit-background-color: #fcb7bb;
+  --diff-code-selected-background-color: #fffce0;
+  --diff-omit-gutter-line-color: #fadde0;
+}
+
 html {
   background-color: #fff;
   width: 100%;
@@ -27,6 +43,7 @@ body {
 .controls {
   display: flex;
   margin: 10px 0 0;
+  user-select: none;
 }
 
 .control-item {
@@ -66,12 +83,10 @@ body {
   overflow: hidden;
 }
 
-.search {
-}
-
-pre {
+.diff-view *, pre {
   font-family: "Menlo","Meslo LG",monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 12.9px;
+  line-height: 2;
 }
